--- a/projects/meganassignments/script2.tex
+++ b/projects/meganassignments/script2.tex
@@ -2,9 +2,8 @@
 
 \starttext
 
-\nameanddate{Megan Andrews}{February}{5}{2022}
+\nameanddate{Megan Andrews}{March}{26}{2022}
 
-%\chapter[ownnumber=1,title={What is ISHTA Yoga?}]
 \vskip1.3em
 \startalignment[middle]
 \dontleavehmode
@@ -15,7 +14,7 @@ Script 2%
 \raise0.35em\hbox{\rotate[rotation=180]{\scale[xscale=1450]{\mirror{\symbol[zapfswash]}}}}
 \vskip-\lineheight
 \vskip1ex
-Ujjayi
+Trikonasana
 \vskip0.5ex
 \dontleavehmode
 \scale[xscale=2100]{\mirror{\symbol[zapfswash]}}
@@ -25,49 +24,20 @@ Ujjayi
 \vskip2.1ex
 
 \blank[line]
-\noindent {\sc Transition from Downward Dog}
+\noindent(Preparation: Keep one block close to the front of your mat.)
+\blank[line]
+\noindent {\sc Transition from Warrior 2 (right leg forward)}
 \startitemize[symbol=mybullet1]
-\item \color[inhale]{Inhale}: Look between your hands and send the right foot gently between the palms.\par
-\noindent *\color[exhale]{Exhale}*
-\item Swivel the back foot to about 45 degrees, keeping the outer edge of the foot firmly planted 
-\item \color[inhale]{Inhale}: Rise up, arms stretched upwards, and welcome to warrior one\par
-\noindent *\color[exhale]{Exhale}* 
-\item As you arrive in Virabhadrasana, start to notice in which ways your body could use more support and ease. 
-    \startitemize[symbol=mybullet2]
-    \item Maybe allow your hips more space by moving the feet wider apart/toward the edges of the mat
-    \item Play with the position of the arms
-        \startitemize[symbol=2]
-        \item They don't have to be beside the ears, they can be slightly in front
-        \stopitemize
-    \stopitemize
-\item Stay with your breath
-\item What feedback are you getting from your feet? Allow the stability from your feet to spread up through the legs, so that each leg supports your weight equally with the torso well balanced in the center
-\item Imagine the pelvis is a bowl filled with liquid that you want to keep contained
-    \startitemize[symbol=mybullet2]
-    \item It doesn't tilt too forward or backward
-    \item Can you square your pelvis with the front of your mat?
-    \stopitemize
-\item Draw the navel to the spine and start to lengthen up to the crown of your head
-\item Breathe in through the crown, down the spine, through the feet and into the ground below
+    \item
+    \item
 \stopitemize
 \blank[line]
 \noindent {\sc Transition Out}
 \startitemize[symbol=mybullet1]
-\item *\color[inhale]{Inhale}*
-\item \color[exhale]{Exhale}: Frame the front foot with your hands
-\item \color[inhale]{Inhale}: Step back to downward dog
-\item \color[exhale]{Exhale}: Release all the air out of your body and settle into downward dog for 5 breaths
+\item 
 \stopitemize
 \blank[line]
 \noindent {\sc Repeat Other Side}
-\blank[line]
-\noindent {\sc Modification}
-\startitemize[symbol=mybullet1]
-\item If you feel discomfort, you're welcome to come to a high lunge instead
-    \startitemize[symbol=mybullet2]
-    \item Just swivel the back foot forward and lift the heel
-    \stopitemize
-\stopitemize
 
 \stoptext
 
