--- a/projects/meganassignments/script2.tex
+++ b/projects/meganassignments/script2.tex
@@ -28,13 +28,20 @@ Trikonasana
 \blank[line]
 \noindent {\sc Transition from Warrior 2 (right leg forward)}
 \startitemize[symbol=mybullet1]
-    \item
-    \item
+    \item Straighten the right leg and shorten your stance, but try to keep that bouncy microbend in the front knee. Turn the left foot inward slightly.
+\item Take a moment to notice that all four corners of the feet are rooted firmly in the ground. Let this be the foundation from which you draw all your stability and balance.
+\item \color[inhale]{Inhale}: lengthen the spine up through the crown of the head
+\item \color[exhale]{Exhale}: Let the right arm lead the torso forward over the right leg, as if you're reaching for something. Allow the left hip to slide back and draw the torso over the right leg. 
+\item Drop the right arm, placing your hand on the block nearby.  Keep the integrity of the spine and the waist equally long on both sides. Use the height of the block that allows you to maintain this balance.
+\item Allow the left arm to float up towards the sky, reaching the fingertips upwards to continue the line of your lower arm.
+\item \color[inhale]{Inhale}: Roll the chest open slightly towards the sky, perhaps allowing the gaze to follow if it doesn't strain the neck.
+\item Find expansion in the chest for the breath to flow in and out, and take any adjustments as needed.
 \stopitemize
 \blank[line]
 \noindent {\sc Transition Out}
 \startitemize[symbol=mybullet1]
-\item 
+\item \color[inhale]{Inhale}: Bend the front knee generously and press the feet in to the ground
+\item \color[exhale]{Exhale}: Activate the lower abdomen and start to raise the torso back up 
 \stopitemize
 \blank[line]
 \noindent {\sc Repeat Other Side}
