--- a/projects/meganassignments/script2.tex
+++ b/projects/meganassignments/script2.tex
@@ -35,7 +35,7 @@ Trikonasana
 \item Drop the right arm, placing your hand on the block nearby.  Keep the integrity of the spine and the waist equally long on both sides. Use the height of the block that allows you to maintain this balance.
 \item Allow the left arm to float up towards the sky, reaching the fingertips upwards to continue the line of your lower arm.
 \item \color[inhale]{Inhale}: Roll the chest open slightly towards the sky, perhaps allowing the gaze to follow if it doesn't strain the neck.
-\item Find expansion in the chest for the breath to flow in and out, and take any adjustments as needed.
+\item \color[exhale]{Exhale}: Find expansion in the chest for the breath to flow in and out, and take any adjustments as needed.
 \stopitemize
 \blank[line]
 \noindent {\sc Transition Out}
