--- a/projects/isaif/isaif.tex
+++ b/projects/isaif/isaif.tex
@@ -3,13 +3,10 @@
 \starttext
   \startfrontmatter
     \input titlepage
-%    \input toc
+    \input toc
   \stopfrontmatter
-  
   \startbodymatter
-
-\input mainchaptersnogaps
-\input endnotes
-
+    \input mainchaptersnogaps
+    \input endnotes
   \stopbodymatter
 \stoptext
