--- a/projects/isaif/titlepage.tex
+++ b/projects/isaif/titlepage.tex
@@ -1,13 +1,20 @@
 \startalignment[middle]
-\start
-\setupbodyfont[18pt]
-\WORD\spaceskip0.35em\kerncharacters[0.14]
-Industrial society
-
-and it's future
-\blank[line]
-FC
-\stop
+\blank[-23pt,force]
+\color[myred]{
+{\tfb \WORD\spaceskip0.35em\kerncharacters[0.14] Industrial Society}
+\blank[1pt]
+{\tfb \WORD\spaceskip0.35em\kerncharacters[0.14] And Its Future}}
+\blank[23pt]
+{\tfa \fontchar{orn.005}}
+\blank[24pt]
+{\tfa \color[black]{Ted Kaczynski}}
+\blank[7pt]
+{\it originally under\\ the pseudonym}
+\blank[10pt]
+{\tfa \color[black]{\kerncharacters[0.14]FC}}
+\blank[27pt]
+\centerline{\externalfigure[CabinInTheWoods.pdf][width=6.5cm]}
 \vfill
-Printed privately, 2022
+{\tfx{Privately printed}\\
+\hbox to 0.18em{}Staffanstorp, 2022}
 \stopalignment
