--- a/projects/meganassignments/assignments-environment.tex
+++ b/projects/meganassignments/assignments-environment.tex
@@ -29,6 +29,7 @@
 \definefontsynonym[kingthings][file:kingthings.ttf]
 \definesymbol[mybullet1][\raise0.2ex\hbox{\definedfont[file:kingthings at 16pt]M}]
 \definesymbol[mybullet2][\raise0.2ex\hbox{{\definedfont[file:kingthings at 15pt]A}}]
+\definesymbol[mybullet3][\raise0.2ex\hbox{\char`~}]
 
 %%
 %% C O L O R S
