--- a/projects/nicolas/nicolas.tex
+++ b/projects/nicolas/nicolas.tex
@@ -12,31 +12,15 @@
 
 
 
-
-
 \starttext
+\setbox0=\hbox{abcdefghijklmnopqrstuvwxyz}
+\the\wd0
 
-%\setupbackgrounds[page][background=mybg]
-
-%\startlines
-%Page layout after Golden Canon of Page Construction.
-%Set with Adobe Jenson 11/13, 24pc measure.
-%Page proportion: 1.5
-%Textblock proportion: 1.5
-%Margins: spine = page width / 9; top = page height / 9; edge = 2 $\times$ spine
-%
-%\stoplines
-
-%\blank[line]
-
+\noindent{\kerncharacters[0.125]\color[red]{\tfa LOREM IPSUM DOLOR SIT AMET CON SECTITUR}}
 
 \noindent Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta sit amet ex at placerat. Duis sit amet venenatis augue. ÅÄÖ Pellentesque vestibulum elit ac lobortis rhoncus. Vestibulum ullamcorper molestie nisl, quis fermentum dui euismod ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi a fermentum erat. Nam sagittis semper lectus, non pharetra mauris euismod sit amet.
 
-\switchtobodyfont[11pt,ajenson]
-\blank[line]
-
-
-\noindent Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta sit amet ex at placerat. Duis sit amet venenatis augue. Pellentesque vestibulum elit ac lobortis rhoncus. Vestibulum ullamcorper molestie nisl, quis fermentum dui euismod ac. ÅÄÖ Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi a fermentum erat. Nam sagittis semper lectus, non pharetra mauris euismod sit amet.
+\P Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta sit amet ex at placerat. Duis sit amet venenatis augue. Pellentesque vestibulum elit ac lobortis rhoncus. Vestibulum ullamcorper molestie nisl, quis fermentum dui euismod ac. ÅÄÖ Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi a fermentum erat. Nam sagittis semper lectus, non pharetra mauris euismod sit amet.
 \page[yes]
 Aliquam erat volutpat. Quisque interdum pulvinar quam. Cras pellentesque arcu sed blandit placerat. Duis ultrices malesuada mauris in placerat. Nunc non ipsum eu mauris lobortis efficitur. Nulla consequat scelerisque fermentum. Fusce iaculis molestie est aliquam ultrices.
 
